# AskViraBot-Telegram-Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  check_health.py  database.py  database_schema.sql  errors.py  fetch_metro_data.py  keep_alive.py  languages.json  logger.py  main.py  pyproject.toml  rate_limiter.py  render.yaml  requirements-dev.txt  requirements.txt  state.py  test_dispatch.py  test_logic.py  test_pkg_conflict.py  test_pkg_conflict2.py  test_router.py
.github/workflows/: ci.yml  supabase-keep-alive.yml
config/: __init__.py  settings.py
core/: loader.py  router.py
docs/: public-release.md
handlers/: __init__.py  admin.py  ai_chat.py  general.py  metro.py  metro_data.py  notes.py  pdf.py  reminders.py  shazam.py  tools.py  video.py  weather.py
handlers/games/: __init__.py  core.py  sudoku.py  tkm.py  web_games.py  xox_web.py
locales/: en.json  ru.json  tr.json
models/: game_state.py  note_model.py  reminder_model.py  user_model.py
scripts/: run_supabase_keep_alive.py
services/: activity_service.py  ai_service.py  cache_service.py  game_service.py  metro_service.py  note_service.py  reminder_service.py  supabase_keep_alive.py  user_service.py
test_pkg/: __init__.py  my_mod.py
test_pkg2/: router.py
tests/: test_core.py  test_errors.py  test_handlers.py  test_rate_limiter.py  test_services.py  test_state.py  test_supabase_keep_alive.py  test_web_api.py
texts/: __init__.py  common.py  localization.py  strings.py
utils/: __init__.py  callbacks.py  decorators.py  errors.py  helpers.py  inline_keyboards.py  keyboards.py  legacy_utils.py  middleware.py  url_validator.py
web/: 2048.html  flappy.html  runner.html  snake.html  sudoku.html  xox.html
