[project]
name = "virabot"
version = "2.0.0"
description = "Vira — Multilingual Telegram Bot"
requires-python = ">=3.11,<3.14"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["."]
exclude = [
    ".git",
    "__pycache__",
    "vira_backup_legacy",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E701",   # multiple statements on one line (existing code convention)
    "E402",   # module level import not at top (circular import avoidance)
    "E722",   # bare except (existing code pattern)
    "B008",   # function call in default argument
    "SIM105", # contextlib.suppress (readability preference)
    "SIM108", # ternary operator (readability preference)
    "SIM117", # combine with statements (readability preference)
    "RUF001", # string contains ambiguous unicode (Turkish chars)
    "RUF002", # docstring contains ambiguous unicode
    "RUF003", # comment contains ambiguous unicode
    "RUF006", # asyncio.create_task fire-and-forget (intentional for background tasks)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Re-exports in package init files are intentional

[tool.ruff.lint.isort]
known-first-party = ["config", "handlers", "services", "utils", "models", "core"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
